ordinal node box overflow fix

--- a/less/style.less
+++ b/less/style.less
@@ -235,7 +235,7 @@ html, body {
     align-items: center;
     // justify-content: center;
     // border-radius: 50%;
-    overflow-x: scroll;
+    // overflow-x: scroll;
     margin:10px;
     transition: all 0.5s ease-in-out;
 
